src/scss/partials/_base.scss
html {
  background: $accent-light;
  font-size: calc(.75em + .35vw);
  overflow-x: hidden;

  /**
   * Box-sizing best-practices from CSS-Tricks.
   * https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
   */
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

::-moz-selection {
  background: $color-primary;
  color: $accent-light;
  text-shadow: none;
}

::selection {
  background: $color-primary;
  color: $accent-light;
  text-shadow: none;
}

body *:not($toast-grid-column-namespace) + *:not($toast-grid-column-namespace) {
  margin-top: 1.5rem;
}

